@@ -22,11 +22,12 @@
 
         function startAndroidAPP() {
             console.log("start android app...");
-            window.location = "xlmm://local.app/openwith";//打开本地app
-            setTimeout(
-                    function () {
-                        window.location = "http://7xogkj.com2.z0.glb.qiniucdn.com/Xlmm_v1.0.1_2016-02-22_xlmm_psigned.apk";//超时则去下载
-                    }, 80);
+            //window.location = "http://7xogkj.com2.z0.glb.qiniucdn.com/Xlmm_v1.0.1_2016-02-22_xlmm_psigned.apk;
+            //window.location = "xlmm://local.app/openwith";//打开本地app
+            //setTimeout(
+            //        function () {
+            //            window.location = "http://7xogkj.com2.z0.glb.qiniucdn.com/Xlmm_v1.0.1_2016-02-22_xlmm_psigned.apk";//超时则去下载
+            //        }, 80);
         }
         function startiOSAPP() {
             console.log("start iOS app...");
@@ -54,8 +55,21 @@
         <img src="http://7xogkj.com2.z0.glb.qiniucdn.com/weixin_tip" alt="" width="100%" id="weixin_label" hidden="hidden"/>
     <div id="download" style="text-align: center">
       <div class="col-xs-12" style="text-align: center;height: 180px; margin-bottom: 100px">
-        <h3 style="padding: 30px;color: white">下载APP</h3>
         <img src="http://7xogkj.com2.z0.glb.qiniucdn.com/1181123466.jpg" alt="" class="img-circle"/>
+      <div class="row">
+      <div class="col-xs-1"></div>
+      <div class="col-xs-4" style="margin-top: 30px" >
+        <a class="btn btn-default form-control" type="submit"
+           href="http://7xogkj.com2.z0.glb.qiniucdn.com/Xlmm_v1.0.1_2016-02-22_xlmm_2.apk" style="background:#FFB329;color:white">安卓下载</a>
+      </div>
+      <div class="col-xs-2"></div>
+      <div class="col-xs-4" style="margin-top: 30px">
+        <a class="btn btn-default form-control" type="submit"
+           href="https://itunes.apple.com/us/app/xiao-lu-mei-mei/id1051166985" style="background:#FFB329;color:white">苹果下载</a>
+        <div class="col-xs-1"></div>
+      </div>
+    </div>
+
       </div>
       <div class="row" style="margin-top: 60px">
         <div class="col-xs-1"></div>
@@ -91,6 +105,7 @@
     
 {% block footer %}
     <script>
+
         $(document).ready(function () {
             var os = OSTest();
             if (isWeiXin()) {//如果是微信内置浏览器则提示在外部浏览器打开
@@ -109,8 +124,8 @@
                 else {
                     $("#qrcode_android_download").show();
                     $("#qrcode_ios_download").show();
-                    $("#click_android_download").show();
-                    $("#click_ios_download").show();
+                    //$("#click_android_download").show();
+                    //$("#click_ios_download").show();
                 }
             }
         });
